--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,7 @@ authors = [
 license = { file = "LICENSE" }
 requires-python = ">=3.10"
 dependencies = [
-    "numpy>=2.1.1, <3.0.0",
+    "numpy",
     "opencv-python>=4.10.0.84",
     "tk>=0.1.0, <1.0.0", 
     "matplotlib",
